adjusted image directory

--- a/personal-profile/index.html
+++ b/personal-profile/index.html
@@ -10,7 +10,7 @@
 </header>
 <section>
     <p>I am a frontend developer hoping to upskill</p>
-    <img src="/profile.png" alt="a picture of myself" />
+    <img src="/personal-profile/profile.png" alt="a picture of myself" />
 </section>
 <h2>Hobbies & Interest</h2>
 <ol>
@@ -20,6 +20,6 @@
 </ol>
 <footer>
     <address>
-        <p>email address: Chiamakauyanna@gmail.com</p>
+        <p>Email address: Chiamakauyanna@gmail.com</p>
     </address>
 </footer>
