update: adjusted styling

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,6 +19,7 @@
       <button>Enroll Now</button>
     </section>
     <section id="feature">
+      <h2>Features</h2>
       <div>
         <section class="feature-item">
           <img
@@ -39,7 +40,7 @@
           <h3>Backend development</h3>
           <p>Learn to develop api's for bot web and mobile applications</p>
         </section>
-        <section class="feature-item">
+        <section class="feature-item item3">
           <img
             src="https://img.icons8.com/?size=100&id=20906&format=png&color=000000"
             alt="Git icon"
