--- a/personal-profile/index.html
+++ b/personal-profile/index.html
@@ -1,35 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
     <header>
-        <h1>My Profile</h1>
-        <nav>
-            <ul>
-                <li>About Me</li>
-                <li>Hobbies</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
+      <h1>My Profile</h1>
+      <nav>
+        <ul>
+          <a href="#">
+            <l1>About Me</l1>
+          </a>
+          <a href="#hobbies">
+            <l1>Hobbies</l1>
+          </a>
+          <a href="#contact">
+            <l1>Contact</l1>
+          </a>
+        </ul>
+      </nav>
     </header>
-    <section>
-        <p>I am a frontend developer hoping to upskill</p>
-        <img src="/personal-profile/profile.png" alt="a picture of myself" />
-    </section>
-    <h2>Hobbies & Interest</h2>
-    <ol>
+    <section id="about">
+      <p>I am a frontend developer hoping to upskill</p>
+      <img src="/personal-profile/profile.png" alt="a picture of myself" />
+
+      <h2 id="hobbies">Hobbies & Interest</h2>
+      <ol>
         <li>Volleyball with friends</li>
         <li>Movies</li>
         <li>arts</li>
-    </ol>
-    <footer>
-        <address>
-            <p>Email address: Chiamakauyanna@gmail.com</p>
-        </address>
+      </ol>
+    </section>
+    <footer id="contact">
+      <address>
+        <p>Email address: Chiamakauyanna@gmail.com</p>
+      </address>
     </footer>
-    </body>
+  </body>
 </html>
