--- a/personal-profile/index.html
+++ b/personal-profile/index.html
@@ -1,39 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Profile</title>
   </head>
   <body>
     <header>
       <h1>My Profile</h1>
       <nav>
         <ul>
-          <a href="#">
-            <l1>About Me</l1>
-          </a>
-          <a href="#hobbies">
-            <l1>Hobbies</l1>
-          </a>
-          <a href="#contact">
-            <l1>Contact</l1>
-          </a>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#hobbies">Hobbies</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <section id="about">
-      <p>I am a frontend developer hoping to upskill</p>
-      <img src="/personal-profile/profile.png" alt="a picture of myself" />
 
-      <h2 id="hobbies">Hobbies & Interest</h2>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I am a frontend developer hoping to upskill.</p>
+      <img src="/personal-profile/profile.png" alt="A picture of myself" />
+    </section>
+
+    <section id="hobbies">
+      <h2>Hobbies & Interests</h2>
       <ol>
         <li>Volleyball with friends</li>
         <li>Movies</li>
-        <li>arts</li>
+        <li>Arts</li>
       </ol>
     </section>
+
     <footer id="contact">
+      <h2>Contact</h2>
       <address>
         <p>Email address: Chiamakauyanna@gmail.com</p>
       </address>
