--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -38,7 +38,7 @@
           <p>Learn to develop APIs for both web and mobile applications.</p>
         </article>
   
-        <article class="feature-item item3">
+        <article class="feature-item">
           <img
             src="https://img.icons8.com/?size=100&id=20906&format=png&color=000000"
             alt="Git icon"
