--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,83 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <title>Document</title>
+    <title>FullStack Development</title>
   </head>
   <body>
+    <!-- Hero Section -->
     <section id="hero">
-      <h1>FullStack development</h1>
-      <p>
-        Learn software development, frontend and backend for mobile and web.
+      <h1>FullStack Development</h1>
+      <p class="subheading">
+        Learn software development, including frontend and backend for mobile and web.
       </p>
-      <button>Enroll Now</button>
+      <button class="cta-button">Enroll Now</button>
     </section>
-    <section id="feature">
+
+    <!-- Features Section -->
+     <section id="feature">
       <h2>Features</h2>
       <div>
-        <section class="feature-item">
+        <article class="feature-item">
           <img
             src="https://img.icons8.com/?size=100&id=dhecLjnptiQg&format=png&color=000000"
             alt="Front End icon"
           />
-          <h3>Frontend development</h3>
-          <p>
-            learn to development a website with html, css, JavaScript and
-            frontend frameworks.
-          </p>
-        </section>
-        <section class="feature-item">
+          <h3>Frontend Development</h3>
+          <p>Learn to develop a website using HTML, CSS, JavaScript, and frontend frameworks.</p>
+        </article>
+    
+        <article class="feature-item">
           <img
             src="https://img.icons8.com/?size=100&id=44484&format=png&color=000000"
-            alt="backend icon"
+            alt="Backend icon"
           />
-          <h3>Backend development</h3>
-          <p>Learn to develop api's for bot web and mobile applications</p>
-        </section>
-        <section class="feature-item item3">
+          <h3>Backend Development</h3>
+          <p>Learn to develop APIs for both web and mobile applications.</p>
+        </article>
+  
+        <article class="feature-item">
           <img
             src="https://img.icons8.com/?size=100&id=20906&format=png&color=000000"
             alt="Git icon"
           />
           <h3>Git</h3>
-          <p>Learn to use git for project management</p>
-        </section>
+          <p>Learn to use Git for project management and version control.</p>
+        </article>
       </div>
     </section>
-    <section id="footer">
-      <footer>
-        <address>
-          <p>Email address: Chiamakauyanna@gmail.com</p>
-          <p>Phone Number: 08100802635</p>
-          <p>
-            <a href="https://www.linkedin.com/in/chiamakauyanna/"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="100"
-                height="100"
-                viewBox="0 0 48 48"
-              >
-                <path
-                  fill="#0288D1"
-                  d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"
-                ></path>
-                <path
-                  fill="#FFF"
-                  d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z"
-                ></path>
-              </svg>
-            </a>
-          </p>
-          <p class="copyright">
-            &copy;copyright. All rights reserved by Chiamaka uyanna
-          </p>
-        </address>
-      </footer>
-    </section>
+
+    <!-- Footer Section -->
+    <footer id="footer">
+      <div class="footer-container">
+        <p>Email: <a href="mailto:chiamakauyanna@gmail.com">chiamakauyanna@gmail.com</a></p>
+        <p>Phone: <a href="tel:+2348100802635">08100802635</a></p>
+        <p>
+          <a href="https://www.linkedin.com/in/chiamakauyanna/" target="_blank">
+            <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn" />
+          </a>
+        </p>
+        <p class="copyright">
+          &copy; 2024 Chiamaka Uyanna. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
